--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "BactQuerya",
-  "name": "BactQuerya",
+  "short_name": "BacQuerya",
+  "name": "BacQuerya",
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#000000",
