--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
     "swiftype-app-search-javascript": "^2.4.0",
     "web-vitals": "^1.1.0"
@@ -28,7 +29,7 @@
       "react-app/jest"
     ]
   },
-  "proxy":"http://localhost:5000",
+  "proxy": "http://localhost:5000",
   "browserslist": {
     "production": [
       ">0.2%",
