--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
+    "react-dropzone": "^11.3.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
     "swiftype-app-search-javascript": "^2.4.0",
