--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
     "swiftype-app-search-javascript": "^2.4.0",
-    "web-vitals": "^1.1.0"
+    "web-vitals": "^1.1.0",
+    "xss": "^1.0.9"
   },
   "scripts": {
     "start": "react-scripts start",
