--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "bootstrap": "^4.6.0",
     "bootstrap-icons": "^1.5.0",
     "color-hash": "^2.0.1",
+    "dotenv": "^16.3.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
     "react-dropzone": "^11.3.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.2",
+    "react-scripts": "^5.0.1",
     "swiftype-app-search-javascript": "^2.4.0",
     "web-vitals": "^1.1.0",
     "xss": "^1.0.9"
